fix: proper 401 error response for auth failures, CORS highest precedence