@@ -2,40 +2,42 @@ package com.restaurant.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.core.Ordered;
+import org.springframework.core.annotation.Order;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
- * Global CORS configuration.
- * Allows the React frontend (port 5173) to access the backend (port 9090).
+ * Global CORS configuration — runs BEFORE Spring Security so that
+ * preflight OPTIONS requests to /auth/** are never blocked.
  */
 @Configuration
+@Order(Ordered.HIGHEST_PRECEDENCE)
 public class CorsConfig {
 
     @Bean
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
 
-        // Allow all origins explicitly for development
-        config.setAllowedOriginPatterns(List.of("*"));
+        // Accept requests from any origin (dev + Vercel production)
+        config.addAllowedOriginPattern("*");
 
-        // Allow all HTTP methods
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS", "HEAD"));
+        // All HTTP methods including OPTIONS (preflight)
+        config.setAllowedMethods(List.of("GET","POST","PUT","DELETE","PATCH","OPTIONS","HEAD"));
 
-        // Allow all headers
-        config.setAllowedHeaders(Arrays.asList("*"));
+        // All request headers
+        config.addAllowedHeader("*");
 
-        // Expose headers so frontend can read them
-        config.setExposedHeaders(Arrays.asList("Authorization", "Content-Type"));
+        // Expose auth header to frontend
+        config.setExposedHeaders(List.of("Authorization","Content-Type"));
 
-        // Allow credentials (cookies, auth headers)
+        // Allow cookies / auth headers
         config.setAllowCredentials(true);
 
-        // Cache preflight response for 1 hour
+        // Cache preflight for 1 hour
         config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
